examples/error/copygen.go
// Code generated by github.com/switchupcb/copygen
// DO NOT EDIT.
package copygen

import (
	"github.com/switchupcb/copygen/example/main/converter"
	"github.com/switchupcb/copygen/example/main/domain"
	"github.com/switchupcb/copygen/example/main/models"
)

// ModelsToDomain copies a User, Account to a Account.
func ModelsToDomain(tA *domain.Account, fU models.User, fA models.Account) error {
	// Account fields
	tA.UserID = c.Itoa(tA.ID)
	tA.ID = fA.ID
	tA.Name = fA.Name
	return nil
}
